# alien-stack

./: .gitignore  README.md  SPEC.md  benchmark.md
.github/workflows/: benchmark-plaintext.yml  benchmark-webserver.yml  demo-webserver.yml  k6.yml  tfb-plaintext.yml  ui-kit-build.yml  ui-kit-test.yml
demo/: README.md  SPEC.md  build.sh  fractal.ll  ips-prototype.c  laststack-server  link-gate.sh  run.sh  seal-artifacts.sh  server-opt.bc  server.bc  server.ll  verify.sh
demo/plaintext/: build.sh  link-gate.sh  plaintext.ll  run-benchmark.sh  run.sh  spec.md  verify.sh
demo/plaintext/hyper/: Cargo.toml
demo/plaintext/hyper/src/: main.rs
demo/public/: fractal.wasm  index.html
demo/storage/: build.sh  checksum-z3.smt2  effect-lint.sh  ips-evidence.sh  ips.ll  laststack-ips  roundtrip-z3.smt2  run.sh  spec.md  verify-pcf.sh
demo/ui-kit/: README.md  build.sh  index.html  package.json  serve.ts  spec-uikit.md
demo/ui-kit/ir/: button.ll  components.ll  core.ll  styles.ll
demo/ui-kit/public/: index.html
demo/ui-kit/scripts/: capture.bun.ts  capture.ts  compare.ts  dev.ts  screenshot.ts  serve.bun.ts  serve.ts  test.bun.ts  test.ts
demo/webserver/: build.sh  fractal.ll  link-gate.sh  run.sh  seal-artifacts.sh  server.ll  spec.md  verify.sh
demo/webserver/public/: index.html
docs/: alien-stack-whitepaper.md  benchmark.md  critique.md  demo-spec.md  isomorphic-web-whitepaper.md  white-paper-client.md  white-paper.md  white-paper_v1.md  white-paper_v2.md  white-paper_v3.md  white-paper_v4.md  white-paper_v5.md
test/: run.sh
tools/: extract-graph
