[package]
name = "alienstack_plaintext_hyper"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros", "net"] }
